add gluetun support

--- a/assets/views/base.html
+++ b/assets/views/base.html
@@ -20,6 +20,7 @@
         <div class="flex space-x-8">
           <a href="/sources" class="text-gray-700 hover:text-red-500">Sources</a>
           <a href="/medias" class="text-gray-700 hover:text-red-500">Media Library</a>
+          <a href="/status" class="text-gray-700 hover:text-red-500">Status</a>
         </div>
       </div>
     </div>
