--- a/assets/views/source/list.html
+++ b/assets/views/source/list.html
@@ -17,7 +17,7 @@ List of Sources
             {% endif %}
         </h2>
         {% if item.metadata %}
-            {% if item.metadata.list_tabs and (not item.metadata.list_tab or (item.metadata.list_tab and item.metadata.list_count is null and item.metadata.items == 0)) %}
+            {% if item.metadata.list_tabs and (not item.metadata.list_tab or (item.metadata.list_tab and item.metadata.list_count is none and item.metadata.items == 0)) %}
                 <p class="mb-2"><span class="font-bold">Video Count:</span> unknown (select tab)</p>
             {% else %}
                 <p class="mb-2"><span class="font-bold">Video Count:</span> {{ item.metadata.items }}</p>
